Issue 30: Add a webui for Giraffa (Konstantin P)